Enhance Variation Load